<resources>
    <string name="app_name">alextimofeev_android_hw14</string>
    <string name="new_user">REFRESH</string>
    <string name="text_addressing">Mr.</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_country">Country</string>
    <string name="text_birthdate">date of birth</string>
    <string name="text_age">Age:</string>
    <string name="text_age_int">30</string>
    <string name="text_state">State</string>
    <string name="text_street">Street</string>
    <string name="text_city">City</string>
    <string name="phone_number">Phone number:</string>
    <string name="cell_phone">Cell phone:</string>
    <string name="text_gender">female</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>