<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PersonProfileCardFragment">

    <ImageView
        android:id="@+id/image_person"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <LinearLayout
        android:id="@+id/person_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@+id/image_person"
        app:layout_constraintStart_toEndOf="@+id/image_person"
        app:layout_constraintBottom_toBottomOf="@+id/image_person">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_addressing"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_first_name"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_last_name"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/birthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_birthdate" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_age" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_age_int" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/text_gender" />
        </LinearLayout>

        <TextView
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_street" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_city" />

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_state" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_country" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cell_phone"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/cell_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cell_phone" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/button_refresh"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/sync_24px"
        android:background="@drawable/selector_button"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="40dp"
        android:text="@string/new_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_info"
        android:enabled="true"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/button_refresh"
        app:layout_constraintEnd_toStartOf="@+id/button_refresh"
        app:layout_constraintBottom_toBottomOf="@+id/button_refresh"
        android:layout_marginEnd="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>